# assistent-meet

./: .gitignore  Assistente Meet.spec  Iniciar Assistente Meet.cmd  README.md  latest.json  main.py  projeto.md  pyproject.toml  update-manifest.example.json
assistent_meet.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
hooks/: hook-faster_whisper.py  hook-webrtcvad.py
scripts/: build_windows.py
transcripts/2026-05-19_19-12-24_daily/: events.jsonl  events_diarized.jsonl  transcript.md  transcript_diarizado.md
ui/: main_window.py  style.qss
utils/: app_info.py  app_paths.py  app_update.py  audio_capture.py  clipboard.py  logger_config.py  meeting_manager.py  postprocessor.py  text_writer.py  transcriber.py  vad_detector.py
